Matrikel and email changes on title

--- a/docs/Developers Manual/parts/title.tex
+++ b/docs/Developers Manual/parts/title.tex
@@ -16,12 +16,12 @@ Term paper for the master project I \\ Mentoring Teacher: Prof. Dr. Debora Weber
 Department Economics II\\
 HTW Berlin -- University of Applied Sciences\\
 
-\rule{8.5cm}{0.2mm}\\
-Elsa Mahari (s0534217) \href{mailto:elsa.mahari@gmx.de}{\textless Elsa.Mahari@gmx.de\textgreater}\\
-Heiko Stammel (s0534217) \href{mailto:heiko.stammel@googlemail.com}{\textless heiko.stammel@googlemail.com\textgreater}\\
-Benjamin Oertel (s0522720) \href{mailto:benjamin.oertel@me.com}{\textless benjamin.oertel@me.com\textgreater}\\
+\rule{8.2cm}{0.2mm}\\
+Elsa Mahari (s0534556) \href{mailto:elsa.mahari@gmx.de}{\textless Elsa.Mahari@gmx.de\textgreater}\\
+Tien Nguyen (s0512510) \href{mailto:s0512510@htw-berlin.de}{\textless s0512510@htw-berlin.de\textgreater}\\
 Dominik Horb (s0534217) \href{mailto:dominik.horb@googlemail.com}{\textless dominik.horb@googlemail.com\textgreater}\\
-Tien Nguyen (s0534217) \href{mailto:}{\textless \textgreater}\\
+Benjamin Oertel (s0522720) \href{mailto:contact@benjaminoertel.com}{\textless contact@benjaminoertel.com\textgreater}\\
+Heiko Stammel (s0534218) \href{mailto:heiko.stammel@googlemail.com}{\textless heiko.stammel@googlemail.com\textgreater}\\
 
 
 \end{center}
