--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -62,3 +62,14 @@ VroniPlag workflow.
 If you know all those things already and simply want to get started working and coding, you should probably jump
 to \nameref{chap:developingUnplagged}. This chapter will give insights into the project workflow, the basic installation
 steps and all necessary tools for you as a developer.
+
+\section{Conventions}
+
+To markup important words in the text, the following typgraphic conventions are use:
+
+\begin{description}
+\item \textit{Italic} \hfill \\
+  Firstly used technical terms
+\item \texttt{Constant Width} \hfill \\
+  Programm code, file names, paths, URIs
+\end{description}
