--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -58,7 +58,7 @@ If you didn't use git before, it would probably be a good idea, to watch this 8 
 \item \url{http://www.youtube.com/watch?v=RDGzF2M-zlo}
 \end{itemize}
 
-\subsubsection{Installating the Git Bash}
+\subsubsection{Installing Git Bash}
 
 First of all let's find out, how to install the Git console application, called Git Bash. 
 Unfortunately all the GUIs we were evaluating didn't work consistently, so we decided to use it from the command line 
@@ -158,7 +158,7 @@ sources. A nice description of how this process is done can be found at github a
 It is possible, if two developers were working on the same part of  file, that a conflict raises during the merge. Such 
 a conflict could look like this:
 
-\begin{lstlisting}
+\begin{lstlisting}[caption=Merge conflict]
 CONFLICT (content): Merge conflict in readme.txt
 
 To https://github.com/benoertel/unplagged.git
