--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+﻿\chapter*{Introduction}
 
 Even though the big media coverage and interest in plagiarism in Germany has very much subsided 
 after Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis\citep{Google2012}, 
@@ -15,7 +15,7 @@ every media informatics student at the \href{http://htw-berlin.de/}{HTW-Berlin} 
 a well known expert in Germany on the
 topic of plagiarism,
 does research in this field for over ten years\citep{Spiegel-Online2011} and is actively involved in the VroniPlag
-community, she came up with the idea to build a dedicated system --- a \enquote{Plagiarism Detection Cockpit}\citep{Weber-Wulff2011}, 
+community, she came up with the idea to build a dedicated system --- a \enquote{Plagiarism Detection Cockpit}\citep{Weber-Wulff2011} --- 
 that is modeled after the experiences that were made
 with the workflow used in VroniPlag and GuttenPlag.
 
@@ -38,7 +38,7 @@ fragments inside a scientific paper, a homework assignment or any other kind of 
 This present document will be the handbook that gets you started if you are interested in helping us with the development of this 
 open source project, which is licensed under the \href{http://www.gnu.org/licenses/quick-guide-gplv3}{GNU GPLv3}.
 
-\section{Chapter Overview}
+\section*{Chapter Overview}
 
 One of the biggest problems we faced at the start was, that none of the team members had written a longer scientific
 text than a bachelors
@@ -54,22 +54,21 @@ help finding plagiarism. Chapter \ref{chap:plagOverview}, \nameref{chap:plagOver
 give a brief overview of the most important topics to get you up to speed with the domain of the software, if you are
 not already familiar with it.
 
-Although we are using agile methods for the development process, the chapter \nameref{chap:systemRequirements} will give
-a more classical collection and description of the parts of the system, that already exist or that we identified as 
-necessary parts of Unplagged and how we understood the requirements of the 
-VroniPlag workflow.
+Chapter \ref{chap:systemRequirements} will be the place, where the development process is described and a collection and description 
+of the parts of the system, that already exist or that we identified as 
+necessary parts of Unplagged will be given.
 
 If you know all those things already and simply want to get started working and coding, you should probably jump
-to \nameref{chap:developingUnplagged}. This chapter will give insights into the project workflow, the basic installation
+to \nameref{chap:developingUnplagged}. This chapter will give the technical insights into the system, the basic installation
 steps and all necessary tools for you as a developer.
 
-\section{Conventions}
+\section*{Conventions}
 
-To markup important words in the text, the following typgraphic conventions are use:
+To markup important words in the text, the following typgraphical conventions are used:
 
 \begin{description}
 \item \textit{Italic} \hfill \\
   Firstly used technical terms
 \item \texttt{Constant Width} \hfill \\
-  Programm code, file names, paths, URIs
+  Programm code, file names, paths
 \end{description}
