--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -1,4 +1,4 @@
-﻿\chapter{A plagiarism primer}\label{chap:plagOverview}
+﻿\chapter{A Plagiarism Primer}\label{chap:plagOverview}
 
 \section{Basic Classification of Plagiarisms}
 
