--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -56,7 +56,8 @@ not already familiar with it.
 
 Chapter \ref{chap:systemRequirements} will be the place, where the development process is described and a collection and description 
 of the parts of the system, that already exist or that we identified as 
-necessary parts of Unplagged will be given.
+necessary parts of Unplagged will be given. As the system is developed with an agile project management style, this will be done
+primarily based on the user stories.
 
 If you know all those things already and simply want to get started working and coding, you should probably jump
 to \nameref{chap:developingUnplagged}. This chapter will give the technical insights into the system, the basic installation
@@ -68,7 +69,9 @@ To markup important words in the text, the following typgraphical conventions ar
 
 \begin{description}
 \item \textit{Italic} \hfill \\
-  Firstly used technical terms
+  First used technical terms
 \item \texttt{Constant Width} \hfill \\
   Programm code, file names, paths
+\item \textbf{\texttt{Bold Constant Width}} \hfill \\
+  Variables that have to be changed by the user
 \end{description}
