--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -1,4 +1,21 @@
-\chapter{System Requirements}\label{chap:systemRequirements}
+% I'm not totally sure, if this should be described together or seperate, but somehow or SCRUM approach and the Redmine
+% stuff should be mentioned somewhere before the developing part and as this are probably only three pages or somethin
+% it probably could be integrated here
+\chapter{Project Management and System Requirements}\label{chap:systemRequirements}
+
+\section{Project Workflow}
+
+To make it possible to work efficiently together in our distributed environment, the team uses 
+\href{http://www.redmine.org/}{Redmine} as it's project management tool, which you can access under:
+
+\begin{itemize}
+\item \url{http://tickets.unplagged.com}
+\end{itemize}
+
+If you register there, an administrator should grant you access to the tickets and the wiki, so that you can participate
+in solving the problems at hand. Our current workflow 
+
+% Redmine description, Meetings, Debbie, Scrum Cards, Server, Website
 
 \section{Target Group}
 
@@ -12,4 +29,5 @@
 
 \section{Plugin Architecture}
 
+%Perhaps better on the way for every part?
 \section{Use Cases}
