--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -48,3 +48,30 @@
   timestamp = {2012.02.26}
 }
 
+
+@MISC{Heise2012,
+  author = {Heise},
+  title = {API-Dokumentation mit NetBeans und ApiGen},
+  howpublished = {\url{http://www.heise.de/developer/meldung/API-Dokumentation-mit-NetBeans-und-ApiGen-1410250.html}},
+  year = {2012},
+  note = {[Online; accessed 08.03.12]},
+  owner = {Dominik}
+}
+
+@MISC{Apigen,
+  author = {Apigen},
+  title = {api documentation generator for PHP 5.3+},
+  howpublished = {\url{http://apigen.org/}},
+  year = {2012},
+  note = {[Online; accessed 08.03.12]},
+  owner = {Dominik}
+}
+
+@MISC{PHPDocumentor,
+  author = {PHPDocumentor},
+  title = {phpDocumentor: The complete documentation solution for PHP},
+  howpublished = {\url{http://www.phpdoc.org/}},
+  year = {2012},
+  note = {[Online; accessed 08.03.12]},
+  owner = {Dominik}
+}
