--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -3,7 +3,7 @@
 % it probably could be integrated here
 \chapter{Project Management and System Requirements}\label{chap:systemRequirements}
 
-\section{Project Workflow}
+\section{Project Workflow}\label{sec:workflow}
 
 To make it possible to work efficiently together in our distributed environment, the team uses 
 \href{http://www.redmine.org/}{Redmine} as it's project management tool, which you can access under:
