--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -365,7 +365,7 @@ end
 \end{lstlisting}
 
 However, we tweaked the source code of this plugin slightly, as you can see on line \ref{customRubyChange}
-in listing \ref{list:redmineGithubHook} so that it also calls the below bash script(listing \ref{deploymentScript})
+in listing \ref{list:redmineGithubHook} so that it also calls the below bash script(listing \ref{list:deploymentScript})
 to initiate the deployment process.
 
 \lstset{language=bash}
