Added meeting images

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -34,7 +34,7 @@
   howpublished = {\url{http://trends.builtwith.com/javascript/jQuery}},
   note = {[accessed online 01.03.12]},
   owner = {Dominik},
-  year = {2012}
+  year = {2012},
   timestamp = {2012.03.01}
 }
 
