--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -17,6 +17,19 @@ in solving the problems at hand. Our current workflow
 
 % Redmine description, Meetings, Debbie, Scrum Cards, Server, Website
 
+
+\begin{figure}[!h]
+    \includegraphics[width=0.8\textwidth]{images/2011-11-15-user-stories-6.jpg}
+  \caption{Scrum Meeting}
+  \label{fig:scrumming}
+\end{figure}
+
+\begin{figure}[!h]
+    \includegraphics[width=0.4\textwidth]{images/2011-11-15-user-stories-5.jpg}
+  \caption{User Stories}
+  \label{fig:userStories}
+\end{figure}
+
 \section{Target Group}
 
 \section{User roles}
