--- a/docs/Developers Manual/parts/appendix.tex
+++ b/docs/Developers Manual/parts/appendix.tex
@@ -6,98 +6,79 @@
 
 \chapter{Time Logging}
 
-\chapter{Selected Sources}
+\chapter{Mockups}
 
-\chapter{Mockups – hand-drawn}
+\section{Hand-Drawn}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/m_compare_result.jpg}
-  }
+    \includegraphics[width=\textwidth]{mockups/m_compare_result.jpg}
   \caption{Mockup – Compare results – digitalized }
   \label{fig:mCompareResultsMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/m_media_list.jpg}
-  }
+    \includegraphics[width=\textwidth]{mockups/m_media_list.jpg}
   \caption{Mockup – Media list – digitalized }
   \label{fig:mMediaListMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/m_new_case.jpg}
-  }
+    \includegraphics[width=\textwidth]{mockups/m_new_case.jpg}
   \caption{Mockup – New case – digitalized }
   \label{fig:1newCaseMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/m_new_fragment.jpg}
-  }
+    \includegraphics[width=\textwidth]{mockups/m_new_fragment.jpg}
   \caption{Mockup – New fragment – digitalized }
   \label{fig:1newCaseMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/m_new_project.jpg}
-  }
+    \includegraphics[width=\textwidth]{mockups/m_new_project.jpg}
   \caption{Mockup – New project – digitalized }
   \label{fig:mNewProjectMockup}
 \end{figure}
 
-\chapter{Mockups – digitalized}
+\clearpage
+\section{Digitalized}
 
-\begin{figure}[!h]
+\begin{figure}[htbp]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/1_new_case.png}
-  }
+    \includegraphics[width=0.86\textwidth]{mockups/1_new_case.png}
   \caption{Mockup – New case – digitalized }
   \label{fig:1newCaseMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/2_list_fragments.png}
-  }
+    \includegraphics[width=\textwidth]{mockups/2_list_fragments.png}
   \caption{Mockup – List fragments – digitalized }
   \label{fig:2listFragmentsMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/3_new_fragment.png}
-  }
+    \includegraphics[width=\textwidth]{mockups/3_new_fragment.png}
   \caption{Mockup – New fragment – digitalized }
   \label{fig:3newFragmentMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
     \includegraphics[width=0.97\textwidth]{mockups/4_show_fragment_for_approval.png}
-  }
   \caption{Mockup – Show fragment for approval – digitalized }
   \label{fig:4showFragmentForApprovalMockup}
 \end{figure}
 
 \begin{figure}[!h]
   \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{mockups/5_new_report.png}
-  }
+    \includegraphics[width=\textwidth]{mockups/5_new_report.png}
   \caption{Mockup – New report – digitalized }
   \label{fig:5newReportMockup}
 \end{figure}
